--- a/source/_posts/2014-01-17-test-post.markdown
+++ b/source/_posts/2014-01-17-test-post.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "This is a test"
 date: 2014-01-17 15:21:57 -0500
 comments: true
+published: false
 categories: 
 ---
 
@@ -24,3 +25,9 @@ fibs = 1:1:zipWith (+) fibs (tail fibs)
 
 
 Oh good it works.
+
+# Checking if LaTex works:
+
+$$
+f \mbox{ is continuous if for all } \epsilon > 0 \mbox{ there exists a } \delta > 0...
+$$
